--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -21,37 +21,7 @@ body {
   font-feature-settings: "kern", "liga", "clig", "calt";
   text-align: center;
 }
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block;
-}
-audio,
-canvas,
-progress,
-video {
-  display: inline-block;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-progress {
-  vertical-align: baseline;
-}
-[hidden],
-template {
-  display: none;
-}
+
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
@@ -66,14 +36,7 @@ abbr[title] {
   cursor: help;
   text-decoration: none;
 }
-b,
-strong {
-  font-weight: inherit;
-  font-weight: bolder;
-}
-dfn {
-  font-style: italic;
-}
+
 h1 {
   margin-left: 0;
   margin-right: 0;
@@ -91,58 +54,7 @@ h1 {
   font-size: 2.25rem;
   line-height: 1.1;
 }
-mark {
-  background-color: #ff0;
-  color: #000;
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sub {
-  bottom: -0.25em;
-}
-sup {
-  top: -0.5em;
-}
-img {
-  border-style: none;
-  max-width: 100%;
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace;
-  font-size: 1em;
-}
-figure {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
+
 hr {
   box-sizing: content-box;
   overflow: visible;
@@ -170,20 +82,63 @@ textarea {
 }
 
 #login {
-  background-color: hsla(60, 30%, 20%, .7);
+  background-color: hsla(60, 30%, 20%, 0.7);
   color: white;
-  padding: .5rem;
+  padding: 0.5rem;
   transition: 0.4s ease-in-out;
   margin-top: 2rem;
+  width: 30%;
+  margin: 1rem auto;
 }
-#login:hover{
-  background-color: hsla(360, 0%, 100%, .7);
-  color: hsla(60, 30%, 20%, .7);
+#login:hover {
+  background-color: hsla(360, 0%, 100%, 0.7);
+  color: hsla(60, 30%, 20%, 0.7);
   transition: 0.4s ease-in-out;
 }
-optgroup {
-  font-weight: 700;
+#insert {
+  background-color: rgba(44, 97, 34, 0.7);
+  color: white;
+  padding: 0.5rem;
+  transition: 0.4s ease-in-out;
+  margin-top: 2rem;
+  width: 15%;
+  margin: 1rem auto;
 }
+@media only screen and (max-width: 456px) {
+  #insert {
+    width: 40%;
+  }
+}
+#insert:hover {
+  background-color: hsla(60, 30%, 20%, 0.7);
+  color: hsla(60, 19%, 60%, 0.7);
+  transition: 0.4s ease-in-out;
+}
+#logout {
+  background-color: rgba(109, 25, 16, 0.7);
+  color: white;
+  padding: 0.5rem;
+  transition: 0.4s ease-in-out;
+  margin-top: 2rem;
+  width: 20%;
+  margin: 1rem auto;
+}
+#logout:hover {
+  background-color: hsla(60, 30%, 20%, 0.7);
+  color: hsla(60, 19%, 60%, 0.7);
+  transition: 0.4s ease-in-out;
+}
+#excluir {
+  background-color: rgba(231, 23, 0, 0.7);
+  color: white;
+  transition: 0.4s ease-in-out;
+}
+#excluir:hover {
+  background-color: white;
+  color: rgba(231, 23, 0, 0.7);
+  transition: 0.4s ease-in-out;
+}
+
 button,
 input {
   overflow: visible;
@@ -387,26 +342,7 @@ ol {
   list-style-position: outside;
   list-style-image: none;
 }
-dl {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
-dd {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
+
 p {
   margin-left: 0;
   margin-right: 0;
@@ -417,32 +353,28 @@ p {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
-pre {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 1.45rem;
-  font-size: 0.85rem;
-  line-height: 1.42;
-  background: hsla(0, 0%, 0%, 0.04);
-  border-radius: 3px;
-  overflow: auto;
-  word-wrap: normal;
-  padding: 1.45rem;
-}
+
 table {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
   margin-bottom: 1.45rem;
   font-size: 1rem;
   line-height: 1.45rem;
   border-collapse: collapse;
   width: 100%;
+  /* text-align: center; */
+  border: 1px solid white;
+}
+td,
+th,
+tr {
+  text-align: center;
+  border-bottom: 1px solid white;
+  padding: 0.5rem;
+  margin: 0 auto;
+}
+@media only screen and (max-width: 456px) {
+  table {
+    font-size: smaller;
+  }
 }
 blockquote {
   margin-left: 1.45rem;
@@ -465,7 +397,15 @@ form {
   margin-bottom: 1.45rem;
 }
 .form {
-  padding: 1rem;
+  padding: 0.6rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.form input {
+  width: 20%;
+  margin: 0.2rem auto;
+  text-align: center;
 }
 noscript {
   margin-left: 0;
@@ -477,35 +417,7 @@ noscript {
   padding-top: 0;
   margin-bottom: 1.45rem;
 }
-iframe {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
-address {
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
-b {
-  font-weight: bold;
-}
-strong {
-  font-weight: bold;
-}
-dt {
-  font-weight: bold;
-}
+
 th {
   font-weight: bold;
 }
@@ -543,76 +455,4 @@ li > p {
 code {
   font-size: 0.85rem;
   line-height: 1.45rem;
-}
-kbd {
-  font-size: 0.85rem;
-  line-height: 1.45rem;
-}
-samp {
-  font-size: 0.85rem;
-  line-height: 1.45rem;
-}
-abbr {
-  border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
-  cursor: help;
-}
-acronym {
-  border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
-  cursor: help;
-}
-thead {
-  text-align: left;
-}
-td,
-th {
-  text-align: left;
-  border-bottom: 1px solid hsla(0, 0%, 0%, 0.12);
-  font-feature-settings: "tnum";
-  -moz-font-feature-settings: "tnum";
-  -ms-font-feature-settings: "tnum";
-  -webkit-font-feature-settings: "tnum";
-  padding-left: 0.96667rem;
-  padding-right: 0.96667rem;
-  padding-top: 0.725rem;
-  padding-bottom: calc(0.725rem - 1px);
-}
-th:first-child,
-td:first-child {
-  padding-left: 0;
-}
-th:last-child,
-td:last-child {
-  padding-right: 0;
-}
-tt,
-code {
-  background-color: hsla(0, 0%, 0%, 0.04);
-  border-radius: 3px;
-  font-family: "SFMono-Regular", Consolas, "Roboto Mono", "Droid Sans Mono",
-    "Liberation Mono", Menlo, Courier, monospace;
-  padding: 0;
-  padding-top: 0.2em;
-  padding-bottom: 0.2em;
-}
-pre code {
-  background: none;
-  line-height: 1.42;
-}
-code:before,
-code:after,
-tt:before,
-tt:after {
-  letter-spacing: -0.2em;
-  content: " ";
-}
-pre code:before,
-pre code:after,
-pre tt:before,
-pre tt:after {
-  content: "";
-}
-@media only screen and (max-width: 480px) {
-  html {
-    font-size: 100%;
-  }
 }
