--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -87,8 +87,13 @@ textarea {
   padding: 0.5rem;
   transition: 0.4s ease-in-out;
   margin-top: 2rem;
-  width: 30%;
+  width: 20%;
   margin: 1rem auto;
+}
+@media only screen and (max-width: 456px) {
+  #login {
+    width: 40%;
+  }
 }
 #login:hover {
   background-color: hsla(360, 0%, 100%, 0.7);
@@ -406,10 +411,25 @@ form {
   flex-direction: row;
   flex-wrap: wrap;
 }
+.form-login {
+  padding: 0.6rem;
+  display: flex;
+  flex-direction: column;
+}
+.form-login input {
+  width: 30%;
+  margin: 1rem auto;
+  text-align: center;
+}
 .form input {
   width: 20%;
   margin: 0.2rem auto;
   text-align: center;
+}
+@media only screen and (max-width: 456px) {
+  .form-login input {
+    width: 70%;
+  }
 }
 noscript {
   margin-left: 0;
