--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -109,7 +109,7 @@ textarea {
   width: 15%;
   margin: 1rem auto;
 }
-@media only screen and (max-width: 456px) {
+@media only screen and (max-width: 763px) {
   #insert {
     width: 40%;
   }
@@ -125,8 +125,13 @@ textarea {
   padding: 0.5rem;
   transition: 0.4s ease-in-out;
   margin-top: 2rem;
-  width: 20%;
+  width: 10%;
   margin: 1rem auto;
+}
+@media only screen and (max-width: 763px) {
+  #logout {
+    width: 20%;
+  }
 }
 #logout:hover {
   background-color: hsla(60, 30%, 20%, 0.7);
